--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ license = " AGPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lexopt = "0.1"
