--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ reqwest = { version = "0.11", features = [ "gzip", "brotli", "deflate", "json" ]
 serde = { version = "1", features = [ "derive" ] }
 json = "0.12"
 url = "2"
+serde_json = "1"
