--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,12 @@ license = " AGPL-3.0-or-later"
 
 [dependencies]
 anyhow = "1"
+chrono = "0.4"
+fastrand = "1"
 json = "0.12"
 lexopt = "0.1"
 reqwest = { version = "0.11", features = [ "gzip", "brotli", "deflate", "json" ] }
-rusqlite = "0.26"
+rusqlite = { version = "0.26", features = [ "chrono" ] }
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
 slog = "2"
