--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ fastrand = "1"
 json = "0.12"
 lexopt = "0.1"
 reqwest = { version = "0.11", features = [ "gzip", "brotli", "deflate", "json" ] }
-rusqlite = { version = "0.26", features = [ "chrono" ] }
+rusqlite = "0.26"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
 slog = "2"
