--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ slog = "2"
 slog-journald = "2"
 tokio = { version = "1", features = [ "full" ] }
 url = { version = "2", features = [ "serde" ] }
+crossbeam-channel = "0.5"
