--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ slog-journald = "2"
 tokio = { version = "1", features = [ "full" ] }
 url = { version = "2", features = [ "serde" ] }
 crossbeam-channel = "0.5"
+libsqlite3-sys = "0.23"
