--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ tokio = { version = "1", features = [ "full" ] }
 url = { version = "2", features = [ "serde" ] }
 libsqlite3-sys = "0.23"
 rusty_pool = "0.6"
+signal-hook = "0.3"
