--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ url = { version = "2", features = [ "serde" ] }
 libsqlite3-sys = "0.23"
 rusty_pool = "0.6"
 signal-hook = "0.3"
+futures = "0.3"
+robotstxt = "0.3"
