--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fediverse-observer"
+name = "minoru-fediverse-crawler"
 version = "0.1.0"
 edition = "2021"
 license = " AGPL-3.0-or-later"
