CI: install libsystemd-dev (#36)

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -19,6 +19,9 @@ jobs:
             ~/.cargo/registry/cache
             ~/.cargo/registry/index
 
+      - name: "Install project's dependencies"
+        run: sudo apt-get install --assume-yes libsystemd-dev
+
       - name: "cargo check"
         run: cargo check
 
