Add Clippy to CI

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -25,6 +25,9 @@ jobs:
       - name: "cargo check"
         run: cargo check
 
+      - name: "cargo clippy"
+        run: cargo clippy
+
       - name: "cargo build"
         run: cargo build
 
