Serve pre-compressed index.html and instances.json
Fixes #35.

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@
 /minoru-fediverse-crawler.db-shm
 /minoru-fediverse-crawler.db-wal
 /instances.json
+/instances.json.gz
 /index.html
+/index.html.gz
