Delay starting systemd service until the network is online

--- a/ansible/minoru-fediverse-crawler.service
+++ b/ansible/minoru-fediverse-crawler.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Minoru's Fediverse crawler
-After=network.target
+Requires=network-online.target
+After=network-online.target
 
 [Service]
 Type=simple
