Increase service niceness
It's not doing anything critical, it can wait if it must.

--- a/ansible/minoru-fediverse-crawler.service
+++ b/ansible/minoru-fediverse-crawler.service
@@ -12,5 +12,7 @@ Restart=always
 # The service should normally finish within three seconds, so 5 is plenty.
 TimeoutSec=5
 
+Nice=5
+
 [Install]
 WantedBy=multi-user.target
