systemd: disallow setting S{U,G}ID on files

--- a/ansible/minoru-fediverse-crawler.service
+++ b/ansible/minoru-fediverse-crawler.service
@@ -17,7 +17,9 @@ TimeoutSec=5
 
 Nice=5
 
+# Disallow escalation of privileges
 NoNewPrivileges=yes
+RestrictSUIDSGID=yes
 
 [Install]
 WantedBy=multi-user.target
