systemd: filter system calls

--- a/ansible/minoru-fediverse-crawler.service
+++ b/ansible/minoru-fediverse-crawler.service
@@ -23,5 +23,9 @@ RestrictSUIDSGID=yes
 
 CapabilityBoundingSet=
 
+SystemCallArchitectures=native
+SystemCallFilter=@system-service
+SystemCallErrorNumber=EPERM
+
 [Install]
 WantedBy=multi-user.target
