Fix: allow Unix sockets to fix the journal
Without AF_UNIX sockets, the service couldn't write into the journal,
and only its stdout output was visible in the log.

--- a/ansible/minoru-fediverse-crawler.service
+++ b/ansible/minoru-fediverse-crawler.service
@@ -41,7 +41,9 @@ ProtectControlGroups=yes
 ProtectHostname=yes
 ProtectKernelLogs=yes
 ProtectKernelModules=yes
-RestrictAddressFamilies=AF_INET AF_INET6
+# IPv4 and IPv6 sockets are needed to connect to Fediverse instances
+# Unix socket is needed to connect to journald
+RestrictAddressFamilies=AF_INET AF_INET6 AF_UNIX
 RestrictNamespaces=yes
 RestrictRealtime=yes
 
