--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,1 +1,1 @@
-production ansible_host=fediverse-instances.debiania.in.ua ansible_user=minoru
+production ansible_host=nodes.fediverse.party ansible_user=minoru
