CI: update APT package list before installing anything

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,7 +20,7 @@ jobs:
             ~/.cargo/registry/index
 
       - name: "Install project's dependencies"
-        run: sudo apt-get install --assume-yes libsystemd-dev
+        run: sudo apt-get update && sudo apt-get install --assume-yes libsystemd-dev
 
       - name: "cargo check"
         run: cargo check
