Enable Cargo features explicitly
This lets me shrink the dependency tree just a tiny bit further.

Closes #29.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,24 +7,24 @@ license = " AGPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1"
-chrono = "0.4"
-fastrand = "1"
-lexopt = "0.2"
-ureq = { version = "2", features = [ "gzip", "brotli", "json" ] }
-rusqlite = "0.26"
-serde = { version = "1", features = [ "derive" ] }
-serde_json = "1"
-slog = "2"
-slog-journald = "2"
-url = { version = "2", features = [ "serde" ] }
-libsqlite3-sys = "0.23"
-rusty_pool = "0.7"
-signal-hook = "0.3"
-robotstxt = "0.3"
-tempfile = "3"
-addr = "0.15"
-flate2 = "1"
+anyhow = { version = "1", default-features = false, features = [ "std" ] }
+chrono = { version = "0.4", default-features = false, features = [ "alloc", "std", "clock" ] }
+fastrand = { version = "1", default-features = false }
+lexopt = { version = "0.2", default-features = false }
+ureq = { version = "2", default-features = false, features = [ "tls", "gzip", "brotli", "json" ] }
+rusqlite = { version = "0.26", default-features = false }
+serde = { version = "1", default-features = false, features = [ "derive" ] }
+serde_json = { version = "1", default-features = false }
+slog = { version = "2", default-features = false }
+slog-journald = { version = "2", default-features = false }
+url = { version = "2", default-features = false, features = [ "serde" ] }
+libsqlite3-sys = { version = "0.23", default-features = false }
+rusty_pool = { version = "0.7", default-features = false, features = [ "async" ] }
+signal-hook = { version = "0.3", default-features = false }
+robotstxt = { version = "0.3", default-features = false }
+tempfile = { version = "3", default-features = false }
+addr = { version = "0.15", default-features = false, features = [ "psl" ] }
+flate2 = { version = "1", default-features = false }
 
 [profile.release]
 lto = "fat"
