--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = " AGPL-3.0-or-later"
 [dependencies]
 anyhow = { version = "1", default-features = false, features = [ "std" ] }
 chrono = { version = "0.4", default-features = false, features = [ "alloc", "std", "clock" ] }
-fastrand = { version = "1", default-features = false }
+fastrand = { version = "2", default-features = false, features = [ "std" ] }
 lexopt = { version = "0.3", default-features = false }
 ureq = { version = "2", default-features = false, features = [ "tls", "gzip", "brotli", "json" ] }
 rusqlite = { version = "0.28", default-features = false }
